...
    <string name="nc_add_to_home_screen">Add to home screen</string>
    <string name="nc_shortcut_created">Shortcut created</string>
    <string name="nc_shortcut_conversation_deleted">This conversation no longer exists</string>
    <string name="nc_no_account_for_server">No account found for this server</string>

    <!-- Bottom Navigation -->
    <string name="nc_settings">Settings</string>
    <string name="add_participants">Add</string>

    <!-- Server selection -->
    <string name="nc_server_connect">Test server connection</string>
    <string name="nc_server_helper_text">The link to your %1$s web interface when you open it in the browser.</string>
    <string name="nc_server_testing_connection">Testing connection</string>
    <string name="nc_server_unsupported">Server does not have supported Talk app installed</string>

    <string name="nc_server_url">Server address https://…</string>
    <string name="nc_server_not_installed">Please finish your %1$s installation</string>
...
    <string name="nc_settings_proxy_password_key" translatable="false">proxy_password</string>
    <string name="nc_settings_use_credentials_title">Proxy requires credentials</string>
    <string name="nc_settings_use_credentials_key" translatable="false">proxy_credentials</string>
    <string name="nc_settings_reauthorize">Reauthorize account</string>
    <string name="nc_client_cert_setup">Set up client certificate</string>
    <string name="nc_client_cert_change">Change client certificate</string>
    <string name="nc_settings_remove">Remove</string>
    <string name="nc_settings_remove_confirmation">Please confirm your intent to remove the current account.</string>
    <string name="nc_settings_remove_account">Remove account</string>
    <string name="nc_settings_server_eol_title">Unsupported server</string>
    <string name="nc_settings_server_eol">The server version is too old and not supported by this version of the Android app</string>
    <string name="nc_settings_server_almost_eol">The server version is very old and will not be supported in the next release!</string>
    <string name="nc_settings_warning">Warning</string>
    <string name="nc_settings_wrong_account">Only current account can be reauthorized</string>
    <string name="nc_settings_no_talk_installed">Talk app is not installed on the server you tried to authenticate against</string>
...
