...
            android:layout_toEndOf="@id/avatar_container"
            android:orientation="vertical"
            android:paddingStart="3dp"
            android:paddingEnd="0dp">

            <androidx.emoji2.widget.EmojiTextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_half_margin"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="@dimen/standard_double_margin"
                android:ellipsize="end"
...
