...
            app:endIconContentDescription="@string/nc_server_connect"
            app:endIconDrawable="@drawable/ic_arrow_forward_white_24px"
            app:endIconMode="custom"
            app:endIconTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/serverEntryTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:importantForAutofill="no"
                android:inputType="textUri|textNoSuggestions"
                android:lines="1"
...
