...
                android:layout_centerHorizontal="true"
                android:src="@drawable/account_circle_96dp"
                android:transitionName="userAvatar.transitionTag"
                android:contentDescription="@string/avatar" />

            <com.yarolegovich.mp.MaterialStandardPreference
                android:id="@+id/settings_remove_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/server_age_warning_text_card"
                apc:mp_title="@string/nc_settings_remove_account" />

        </RelativeLayout>
...
